@@ -1,4 +1,5 @@
 SVN
+- Improve Ingres library and header detection
 - Add support for the null clause used in Ingres 9.1.x (and earlier)
 - Change status to Beta
 
